<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:orientation="vertical"
    tools:context="shaolizhi.leanclouddemo.ui.publish.PublishActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/publish_act_textinputlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/publish_act_textinputedittext1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publish_act_string1"
            android:inputType="text"
            android:shadowColor="#000000"
            android:textColor="#000000"
            android:textColorHint="#000000" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/publish_act_textinputlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/publish_act_textinputedittext2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publish_act_string2"
            android:inputType="text"
            android:shadowColor="#000000"
            android:textColor="#000000"
            android:textColorHint="#000000" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/publish_act_textinputlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/publish_act_textinputedittext3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/publish_act_string3"
            android:inputType="number"
            android:shadowColor="#000000"
            android:textColor="#000000"
            android:textColorHint="#000000" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/publish_act_button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_white_button"
        android:text="@string/publish_act_string4"
        android:textColor="#ffffff" />

    <Button
        android:id="@+id/publish_act_button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_white_button"
        android:text="@string/publish_act_string5"
        android:textColor="#ffffff" />

    <ImageView
        android:id="@+id/publish_act_imageview1"
        android:layout_width="300dp"
        android:layout_height="120dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:contentDescription="@string/publish_act_string7"
        android:scaleType="centerCrop" />
</LinearLayout>
